# OSUFlow

Regular/Serial/: CMakeLists.txt  VortexDetector.C  glStreamSurfaceSimpleQuad.C  new_arrow.ppm
renderer/: CMakeLists.txt  LineRendererInOpenGL.h  LineRenderer_ColorScheme.cpp  TubeRenderer.h  TubeRendererInOpenGL.h
renderer/InteractiveSurface/: CMakeLists.txt  SurfaceRenderer.cpp  SurfaceRenderer.h  SurfaceRendererBasic.cpp  SurfaceRendererBasic.h  gcbInteractiveSurface.cpp
renderer/deformation/: BSPLINE.h  CMakeLists.txt  ColorPalette.h  DeformGPU.cu  DeformGPU.h  Ellipse.h  LineRendererInOpenGLDeform.cpp  LineRendererInOpenGLDeform.h  PickPanel.cpp  PickPanel.h  PickWin.cpp  PickWin.h  StreamDeform.cpp  StreamDeform.h  TimeLineRendererInOpenGLDeform.cpp  TimeLineRendererInOpenGLDeform.h  TransformMgr.h  bundle.cpp  bundle.h  cutil_math.h  gcb2.cpp  gcb2.h  gcbDeformation.cpp  modes.h  shaderprogram.cpp  shaderprogram.h
renderer/examples/: CMakeLists.txt  gcbLongStreamline.cpp  gcbStreamlineDynamicColor.cpp
renderer/gesture/: CMakeLists.txt  DataMgr.cpp  DataMgr.h  GestureApp.cpp  GestureApp.h  Main.cpp  SphericalCursor.cpp  SphericalCursor.h  StreamlineGL.cpp  StreamlineGL.h  cutil_math.h
renderer/gesture/JuceLibraryCode/: AppConfig.h  CMakeLists.txt  JuceHeader.h
renderer/gesture/LeapUtil/: LeapUtil.h
sample_data/deform_data/isabel/: UVWf01_step500_seed500_seg.dist  UVWf01_step500_seed500_seg.vec.trace
sample_data/deform_data/plume/: 15plume3d421_seg.dist  15plume3d421_seg.vec.trace
sample_data/deform_data/shaders/: lines_pass_thru.vert  pass_thru.frag
src/: CMakeLists.txt  GeometricDerivations.C  GeometricDerivations.h  OSUFlow.C  OSUFlow.h  StreamSurface.C  StreamSurface.h  Streamline.C  VectorMatrix.C  VectorMatrix.h  calculus.C  calculus.h
